--- a/src/app/Components/cart/cart.component.html
+++ b/src/app/Components/cart/cart.component.html
@@ -9,14 +9,15 @@
           <div
             class="card-body"
           >
-            <div class="d-flex justify-content-between align-items-center">
+          <div class="row">
+            <div class="d-flex flex-row justify-content-between align-items-center">
               <img [src]="item.imgUrl" class="card" alt="...">
               <div>
                 <h5 class="card-title">{{ item.name }}</h5>
                 <p class="card-text">Price: {{ item.price }}</p>
               </div>
             </div>
-            
+            </div>
           </div>
         </div>
       </div>
